--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,12 +19,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity_login"
-            android:theme="@android:style/Theme.Black.NoTitleBar">
-            <intent-filter>
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity android:name=".activity_register"></activity>
+            android:theme="@style/LoginTheme"></activity>
+        <activity android:name=".activity_register"
+            android:theme="@style/LoginTheme"></activity>
     </application>
 
 </manifest>
