LoginRegister Profile UI done

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
         <activity android:name=".activity_login"
             android:theme="@style/LoginTheme"></activity>
         <activity android:name=".activity_register"
-            android:theme="@style/LoginTheme"></activity>
+            android:theme="@style/LoginTheme"
+            android:label="@string/register_title"></activity>
     </application>
 
 </manifest>
